tests/rosetta/out/Rust/active-directory-connect.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:34Z
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
struct LDAPClient {
        Base: &'static str,
        Host: &'static str,
        Port: i32,
        UseSSL: bool,
        BindDN: &'static str,
        BindPassword: &'static str,
        UserFilter: &'static str,
        GroupFilter: &'static str,
        Attributes: Vec<&'static str>,
}

fn main() {
    fn connect(client: LDAPClient) -> bool {
        return client.Host != "" && client.Port > 0;
    }
    fn main() -> () {
        let client = LDAPClient { Base: "dc=example,dc=com", Host: "ldap.example.com", Port: 389, UseSSL: false, BindDN: "uid=readonlyuser,ou=People,dc=example,dc=com", BindPassword: "readonlypassword", UserFilter: "(uid=%s)", GroupFilter: "(memberUid=%s)", Attributes: vec!["givenName", "sn", "mail", "uid"] };
        if connect(&client.clone()) {
            println!("{}", format!("{}{}", "Connected to ", client.Host));
        } else {
            println!("Failed to connect");
        }
    }
    main();
}
